# askthemap

./: .editorconfig  .gitignore  JOURNAL.md  LICENSE  README.md
.github/workflows/: ci.yml
apps/api/: .env.example  README.md  pyproject.toml
apps/api/app/: config.py  main.py  models.py
apps/api/app/routers/: query.py
apps/api/app/vlm/: __init__.py  base.py  gemini.py  schemas.py
apps/web/: README.md  package-lock.json  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: AnalysisPanel.tsx  AnswerDisplay.tsx  Map.tsx  QueryPanel.tsx  SatelliteImagePreview.tsx
apps/web/src/lib/: api.ts
apps/web/src/types/: index.ts
docs/: architecture.md  decisions.md  roadmap.md
scripts/: dev.sh
tests/: README.md  conftest.py  test_image_retrieval.py  test_models.py  test_query_endpoint.py
