[project]
name = "askthemap-api"
version = "0.1.0"
description = "AskTheMap API — geospatial question answering powered by satellite imagery and AI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27.0",
    "pillow>=10.0",
    "pystac-client>=0.8.0",
    "planetary-computer>=1.0.0",
    "rasterio>=1.3.0",
    "numpy>=1.26.0",
    "google-genai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
